CREATE TABLE roles (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, name VARCHAR(80) UNIQUE NOT NULL);
CREATE TABLE users (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, role_id BIGINT UNSIGNED NOT NULL, name VARCHAR(160) NOT NULL, email VARCHAR(190) UNIQUE NOT NULL, password_hash VARCHAR(255) NOT NULL, email_verified_at TIMESTAMP NULL, two_factor_secret VARCHAR(255) NULL, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, FOREIGN KEY (role_id) REFERENCES roles(id));
CREATE TABLE builders (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, name VARCHAR(190) NOT NULL, slug VARCHAR(190) UNIQUE NOT NULL, logo_path VARCHAR(255));
CREATE TABLE properties (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, builder_id BIGINT UNSIGNED NULL, agent_id BIGINT UNSIGNED NULL, title VARCHAR(220) NOT NULL, slug VARCHAR(220) UNIQUE NOT NULL, type ENUM('villa','apartment','commercial') NOT NULL, status ENUM('available','sold','upcoming') DEFAULT 'available', price DECIMAL(15,2) NOT NULL, city VARCHAR(120) NOT NULL, address TEXT NOT NULL, bedrooms TINYINT UNSIGNED DEFAULT 0, bathrooms TINYINT UNSIGNED DEFAULT 0, area_sqft INT UNSIGNED NOT NULL, rera_number VARCHAR(120), featured TINYINT(1) DEFAULT 0, hot TINYINT(1) DEFAULT 0, premium TINYINT(1) DEFAULT 0, latitude DECIMAL(10,7), longitude DECIMAL(10,7), created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, INDEX idx_search(city,type,status,price), FOREIGN KEY (builder_id) REFERENCES builders(id), FOREIGN KEY (agent_id) REFERENCES users(id));
CREATE TABLE property_media (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, property_id BIGINT UNSIGNED NOT NULL, media_type ENUM('image','video','youtube','matterport','floor_plan','document') NOT NULL, path VARCHAR(500) NOT NULL, sort_order INT DEFAULT 0, FOREIGN KEY (property_id) REFERENCES properties(id) ON DELETE CASCADE);
CREATE TABLE amenities (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, name VARCHAR(120) UNIQUE NOT NULL);
CREATE TABLE property_amenities (property_id BIGINT UNSIGNED NOT NULL, amenity_id BIGINT UNSIGNED NOT NULL, PRIMARY KEY(property_id, amenity_id), FOREIGN KEY (property_id) REFERENCES properties(id) ON DELETE CASCADE, FOREIGN KEY (amenity_id) REFERENCES amenities(id));
CREATE TABLE leads (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, property_id BIGINT UNSIGNED NULL, assigned_to BIGINT UNSIGNED NULL, name VARCHAR(160) NOT NULL, email VARCHAR(190), phone VARCHAR(40), status VARCHAR(80) DEFAULT 'new', source VARCHAR(80), notes TEXT, created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, INDEX idx_lead_status(status), FOREIGN KEY (property_id) REFERENCES properties(id), FOREIGN KEY (assigned_to) REFERENCES users(id));
CREATE TABLE appointments (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, lead_id BIGINT UNSIGNED NOT NULL, property_id BIGINT UNSIGNED NOT NULL, scheduled_at DATETIME NOT NULL, status VARCHAR(60) DEFAULT 'requested', FOREIGN KEY (lead_id) REFERENCES leads(id), FOREIGN KEY (property_id) REFERENCES properties(id));
CREATE TABLE blog_posts (id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY, author_id BIGINT UNSIGNED NOT NULL, title VARCHAR(220) NOT NULL, slug VARCHAR(220) UNIQUE NOT NULL, body LONGTEXT NOT NULL, meta_title VARCHAR(220), meta_description VARCHAR(320), published_at TIMESTAMP NULL, FOREIGN KEY (author_id) REFERENCES users(id));
